# beekeeper

./: .gitignore  CURRENT_STATE.md  DESIGN_ANALYSIS.md  README.md  TESTING.md  gradle.properties  iOS_SETUP.md  settings.gradle.kts
api/: .env.example  .gitignore  CHAT_SETUP.md  README.md  pyproject.toml  requirements.txt  verify_api.py
api/app/: __init__.py  database.py  feed_sources.py  main.py  seed_data.py
api/app/models/: __init__.py  alert.py  apiary.py  base.py  event.py  follow.py  hive.py  inspection.py  notification.py  recommendation.py  task.py  user.py
api/app/repositories/: __init__.py  alert_repository.py  apiary_repository.py  event_repository.py  follow_repository.py  hive_repository.py  inspection_repository.py  notification_repository.py  recommendation_repository.py  task_repository.py
api/app/routers/: __init__.py  alerts.py  apiaries.py  auth.py  chat.py  event.py  feed.py  follow.py  hives.py  inspections.py  notification.py  photos.py  recommendations.py  tasks.py  weather.py
api/app/schemas/: __init__.py  alert.py  apiary.py  event.py  (+9 more)
api/tests/: __init__.py  conftest.py  test_alert_recommendation_repositories.py  test_alerts_weather.py  test_apiaries.py  test_apiary_hive_repositories.py  test_apiary_service.py  test_hives.py  test_indexes.py  test_inspection_repository.py  test_main.py  test_recommendations.py  test_serialization.py  test_social_routes.py  test_task_inspection_routes.py  test_task_repository.py
assistive-core/: CONVENTIONS.md  pyproject.toml
assistive-core/assistive_core/: __init__.py  base.py  db.py  settings.py
(+419 files in other folders)
